--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div id="search">
             <input type="text" placeholder="Enter The City Name" id="city" name="city" > 
             <div id="search-img" style="cursor: pointer;">
-              <img src="./images/search.png" >
+              <img src="./search.png" >
              </div>
         </div>
         <div id="hide-show-error">
@@ -148,7 +148,7 @@
         </div>
         <div id="hide-show">
         <div id="main-content">
-            <img src="./images/mist.png" height="100px" width="100px" id="image">
+            <img src="./mist.png" height="100px" width="100px" id="image">
             <p id="text-one">70&deg; C</p>
             <p id="text-two">New York</p>
         </div>
@@ -157,7 +157,7 @@
             <div class="col">
 
                 <div class="img-con">
-                <img src="./images/humidity.png" height="50px" width="50px">
+                <img src="./humidity.png" height="50px" width="50px">
                 </div>
 
                 <div class="data">
@@ -170,7 +170,7 @@
             <div class="col">
 
                 <div class="img-con">
-                    <img src="./images/wind.png" height="50px" width="50px">
+                    <img src="./wind.png" height="50px" width="50px">
                     </div>
     
                     <div class="data">
